--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.4.0",
     "@types/react": "^16.8.14",
     "@types/react-native": "^0.57.50",
     "@types/react-native-vector-icons": "^6.4.0",
+    "axios": "^0.18.0",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.4",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-storage": "^1.0.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
     "tslib": "^1.9.3"
