chore(react-native): upgrade

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,10 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-fast-image')
+    implementation project(':react-native-linear-gradient')
+    implementation project(':react-native-spinkit')
+    implementation project(':react-native-androw')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
