--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "mobx-react": "^5.4.4",
     "native-base": "^2.12.1",
     "react": "16.8.3",
-    "react-native": "0.59.5",
+    "react-native": "0.59.9",
+    "react-native-androw": "^0.0.24",
+    "react-native-animatable": "^1.3.2",
+    "react-native-button-component": "^0.2.28",
+    "react-native-fast-image": "^6.0.3",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-image-zoom-viewer": "^2.2.26",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-spinkit": "^1.3.0",
+    "react-native-status-bar-height": "^2.3.1",
     "react-native-storage": "^1.0.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
