--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-image-crop-picker')
+    implementation project(':react-native-image-picker')
     implementation project(':react-native-fast-image')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-spinkit')
