--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-native-community/async-storage": "^1.4.0",
     "@types/react": "^16.8.14",
     "@types/react-native": "^0.57.50",
+    "@types/react-native-keyboard-spacer": "^0.4.1",
     "@types/react-native-vector-icons": "^6.4.0",
     "axios": "^0.18.0",
     "mobx": "^5.9.4",
@@ -22,7 +23,10 @@
     "react-native-button-component": "^0.2.28",
     "react-native-fast-image": "^6.0.3",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-image-crop-picker": "^0.24.1",
+    "react-native-image-picker": "^0.28.1",
     "react-native-image-zoom-viewer": "^2.2.26",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-spinkit": "^1.3.0",
     "react-native-status-bar-height": "^2.3.1",
