--- a/ios/Forum/Info.plist
+++ b/ios/Forum/Info.plist
@@ -40,7 +40,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) 需要使用你的相机来拍摄照片</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>$(PRODUCT_NAME) 需要使用你的麦克风（录制视频）</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
