--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Forum",
+  "name": "forum",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "react-native-androw": "^0.0.24",
     "react-native-animatable": "^1.3.2",
     "react-native-button-component": "^0.2.28",
+    "react-native-extended-stylesheet": "^0.11.2",
     "react-native-fast-image": "^6.0.3",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-crop-picker": "^0.24.1",
@@ -28,6 +29,7 @@
     "react-native-image-zoom-viewer": "^2.2.26",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-parsed-text": "^0.0.21",
     "react-native-spinkit": "^1.3.0",
     "react-native-status-bar-height": "^2.3.1",
     "react-native-storage": "^1.0.1",
